# amq2-service-ml

./: .env  .gitignore  README.md  docker-compose.yaml  mlops2_architecture.drawio  pyproject.toml
airflow/dags/: etl_process.py  finetune.py  process_train_test_dataset.py  recreate_prod_database.py  retrain_the_model.py
airflow/plugins/domain/: clip_model.py  dataset.py  product.py  trainer.py
airflow/secrets/: variables.yaml
dockerfiles/airflow/: Dockerfile  requirements.txt
dockerfiles/airflow/secrets/: variables.yaml
dockerfiles/airflow_backup/: Dockerfile  pyproject.toml
dockerfiles/fastapi/: app.py  ml_service_pb2.py  requirements.txt
dockerfiles/graphql_api/: Dockerfile  pyproject.toml
dockerfiles/mlflow/: Dockerfile  pyproject.toml
dockerfiles/model_grpc/: Dockerfile  requirements.txt
dockerfiles/model_grpc/app/: main.py
dockerfiles/model_grpc_backup/: Dockerfile  pyproject.toml
dockerfiles/postgres/: 2_fashion.sql  Dockerfile
dockerfiles/rest_api/: Dockerfile  pyproject.toml
notebook_example/: test.ipynb
src/airflow_dags/: finetune.py  process_train_test_dataset.py  recreate_prod_database.py
src/api/: graphql_api.py  ml_service_pb2.py
src/data/: dataset_loader.py
src/domain/: clip_model.py  dataset.py  metrics.py  utils.py
src/graphql_api/: app.py
src/grpc_domain/: ml_service_pb2_grpc.py
src/grpc_domain/proto/: ml_service.proto
src/inference_dispatcher/: dispatcher.py
src/model_grpc/: app.py
src/rest_api/: app.py
src/ui/: app.py
