[tool.poetry]
name = "amq2-service-ml"
version = "0.1.0"
description = ""
authors = ["AlexBarria <alexbarria14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.40.1"
sqlalchemy = "^2.0.42"
datasets = "^4.0.0"
dotenv = "^0.9.9"
pillow = "^11.3.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
