[tool.poetry]
name = "airflow-server"
version = "0.1.0"
description = ""
authors = ["Alex Barria", "Clara Bureu", "Maximiliano Torti"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
apache-airflow = {extras = ["virtualenv"], version = "^3.0.4"}
mlflow = {extras = ["extras"], version = "^3.1.4"}
boto3 = "^1.39.8"
torch = "^2.7.1"
torchvision = "^0.22.1"
transformers = "^4.54.1"
datasets = "^4.0.0"
open-clip-torch = "^3.0.0"
s3fs = "^2025.3.0"
fsspec = "^2025.3.0"
faiss-cpu = "^1.11.0"
pgvector = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
